@@ -3,6 +3,8 @@ examples/create_and_print_mediainfo_snak.pl
 examples/create_and_print_mediainfo_snak_translated.pl
 examples/create_and_print_mediainfo_statement.pl
 examples/create_and_print_mediainfo_statement_translated.pl
+examples/create_and_print_reference.pl
+examples/create_and_print_reference_translated.pl
 examples/create_and_print_sitelink.pl
 examples/create_and_print_snak.pl
 examples/create_and_print_snak_translated.pl
