@@ -1,4 +1,5 @@
 0.09
+ - Add doc for Wikibase::Datatype::Print::Reference.
 
 0.08 2023-04-18T01:48:41+02:00
  - Add doc for Wikibase::Datatype::Print::MediainfoStatement.
